[tool.poetry]
name = "projectpoetry"
version = "0.1.0"
description = ""
authors = ["Ivan <proffesor.09@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^7.4.2"
isodate = "^0.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
